# xeus-lean

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.docs-builder  Dockerfile.e2e  Dockerfile.math-tester  Dockerfile.mathlib  Dockerfile.native  Dockerfile.native-sparkle  Dockerfile.wasm  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WASM_BUILD.md  build.sh  lake-manifest.json  lakefile.lean  pixi.toml  serve_nocache.py  shell.nix  test_check_messages.py  test_clean_output.py  test_execute.py  test_execute2.py  test_infix.py  test_kernel.py  test_wasm_node.cpp  test_with_logs.py  xeus-leanConfig.cmake.in
.github/workflows/: ci.yml  docs.yml
cmake/: GenerateSymbolTable.cmake  LeanRtWasm.cmake  LeanStage0Wasm.cmake  fix_extern_signatures.py  gen_wasm_symtab.sh
cmake/stubs/: lean_wasm_stubs.cpp  uv.h  uv_stubs.c
docs/: Convert.md  landing.html
docs/math-visual/: README.md
docs/math-visual/complex-analysis/: Ch00_NumericsAndMathlib.md  Ch01_Conformal.md  Ch02_Mobius.md  Ch03_RiemannSphere.md  Ch04_ContourIntegration.md  Ch05_Residues.md  Ch06_ArgumentPrinciple.md  Ch07_Rigidity.md  Ch08_RiemannMapping.md  Ch09_EllipticFunctions.md  Ch10_HyperbolicGeometry.md  README.md
docs/math-visual/geometric-algebra/: Ch01_GeometricProduct.md  Ch02_OuterProduct.md  Ch03_Rotors.md  Ch04_Reflections.md  Ch05_ComplexQuaternion.md  Ch06_Duality.md  Ch07_3DRotations.md  Ch08_ConformalGA.md  README.md
docs/math-visual/real-analysis/: Ch00_NumericsAndMathlib.md  Ch01_Continuity.md  Ch02_Derivatives.md  Ch03_Integrals.md  README.md
docs/math-visual/spacetime-algebra/: Ch01_Boosts.md  Ch02_BlackHole.md  README.md
docs/tutorial/md/: Ch00_Setup.md  Ch01_Values.md  Ch02_Match.md  Ch03_Structures.md  Ch04_List.md  Ch05_Array.md  Ch06_String.md  Ch07_HashMap.md  Ch08_Errors.md  Ch09_IO.md  Ch10_FileIO.md  Ch11_Processes.md  Ch12_Network.md  Ch13_Concurrency.md  Ch14_JSON.md  Ch15_Macros.md  Ch16_TypeLevel.md  Ch17_FromHaskell.md  Ch18_WhyLean4.md  README.md
docs/tutorials/: README.md  browser-jupyterlite.md  docker-native.md  docker-wasm.md  mcp-server.md  native-from-source.md  troubleshooting.md
examples/: introduction.md
examples/sparkle/: SparkleDemo.lean  lake-manifest.json  lakefile.lean
hesper-wasm/: build-wasm.sh  lakefile-wasm.lean
hesper-wasm/patches/: 0001-lean-4.28-string-slice.patch
include/xeus-lean/: lean_ffi.h  lean_repl.hpp  xeus_lean_config.hpp  xinterpreter.hpp  xinterpreter_wasm.hpp
notebooks/: mathlib-demo.ipynb  rich-display.ipynb  sparkle-demo.ipynb  sparkle-native-demo.ipynb
scripts/: ci-build-docs.sh  ci-test-math-visual.sh  empty-marker.txt  install-kernelspec.sh  pack-olean-modules.sh  smoke-test-native.py  smoke-test-sparkle.py  test-native-docker.sh  wasm-env.sh
share/jupyter/kernels/xlean/: kernel.json
src/: CommBus.lean  Convert.lean  ConvertMain.lean  ConvertTest.lean  Display.lean  MCPMain.lean  ReplFFI.lean  TestMain.lean.bak  WasmRepl.lean  XeusKernel.lean  glibc_isoc23_compat.c  lean_repl.cpp  main.cpp.bak  main_emscripten_kernel.cpp  post.js  pre.js  xeus_ffi.cpp  xinterpreter.cpp  xinterpreter_wasm.cpp
src/LeanRepl/: Core.lean  FFI.lean
src/REPL/: Frontend.lean  JSON.lean  Main.lean
src/XLean/: MCP.lean
src/XLean/MCP/: ConvertTools.lean  FileTools.lean  KernelBridge.lean  LeanSession.lean  NotebookRun.lean  NotebookTools.lean  Protocol.lean  Tools.lean
src/XLean/MCP/Net/: HTTP.lean  WS.lean
tests/e2e/: README.md  bench-boot.mjs  bench-profile.mjs  dom-serialize.ts  jupyter.ts  package-lock.json  package.json  playwright.config.ts  probe-base.mjs  rich-display.spec.ts  smoke.spec.ts  snapshot.ts  tsconfig.json
tests/fixtures/mock-extra/: .gitignore  MockExtra.lean  README.md  build-wasm.sh  lake-manifest.json  lakefile.lean
tests/fixtures/mock-extra/c_src/: mock_extra_hello.c
